# Taller2_GrafoDual

./: CMakeLists.txt  README.md
lib/pujCGAL/: Dual_Graph.h  Dual_Graph.hxx  IO.h  IO.hxx  Polygon.h  Polygon.hxx  Polygon_Functions.hxx  Triangulation.h  Triangulation.hxx
src/: build_dual_graph.cxx  polygon_drawer.py  triangulate.cxx
